--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,36 @@
   </head>
 
   <body>
+    <% if user_signed_in? %>
+      <li>
+        <%= link_to "Home", destroy_user_session_path, method: :delete %>
+      </li>
+      <li>
+        <%= link_to "Users", destroy_user_session_path, method: :delete %>
+      </li>
+      <li>
+        <%= link_to "Books", destroy_user_session_path, method: :delete %>
+      </li>
+      <li>
+        <%= link_to "logout", destroy_user_session_path, method: :delete %>
+      </li>
+      <li>
+      <%= link_to 'マイページ', user_path(current_user.id) %>
+    </li>
+    <% else %>
+      <li>
+        <%= link_to "Home", new_user_registration_path %>
+      </li>
+      <li>
+        <%= link_to "About", new_user_registration_path %>
+      </li>
+      <li>
+        <%= link_to "sign up", new_user_registration_path %>
+      </li>
+      <li>
+        <%= link_to "login", new_user_session_path %>
+      </li>
+    <% end %>
     <%= yield %>
   </body>
 </html>
