--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,4 +1,14 @@
 <h2>Editing Book</h2>
+<% if @book.errors.any? %>
+	<h3><%= pluralize(@book.errors.count, "error") %>&nbsp;prohibited this user from being saved:</h3>
+	<ul>
+		<% @book.errors.full_messages.each do |message| %>
+		<li><%= message %></li>
+		<% end %>
+	</ul>
+<% end %>
+
+
 <%= form_with model:@book, local:true do |f| %>
   <label for="inputName">Title</label>
   <%= f.text_field :title, autofocus: true, id:"inputName", placeholder:"名前"%>
