--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,2 +1,51 @@
-<%= render 'users/user', user: @user %>
+<% if @user.errors.any? %>
+	<h3><%= pluralize(@user.errors.count, "error") %>&nbsp;prohibited this user from being saved:</h3>
+	<ul>
+		<% @user.errors.full_messages.each do |message| %>
+		<li><%= message %></li>
+		<% end %>
+	</ul>
+<% end %>
+<div class="container">
+<div class="row">
+
+<div class="col-md-3">
+<%= render 'users/user', user: current_user %>
 <%= render 'books/list', books: @books, book: @book %>
+</div>
+
+<div class="col-md-9">
+   <h3>Books</h3>
+
+
+    <table class="table table-hover table-inverse">
+    <thead>
+    <tr>
+    <th></th>
+    <th>Title</th>
+    <th>Opinion</th>
+    <th colspan="3"></th>
+    </tr>
+    </thead>
+
+    <tbody>
+      <% @books.each do |book| %>
+     <tr>
+       <td>
+        <%= link_to book.user do %>
+        <%= attachment_image_tag book.user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg" %>
+
+      <% end %>
+       </td>
+       <td><%= link_to book.title, book, class: "book_#{book.id}" %></td>
+       <td>
+       <%= book.body %>
+       </td>
+
+    <% end %>
+    </tr>
+    </tbody>
+    </table>
+    </div>
+</div>
+</div>
