--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,9 +1,39 @@
+<div class="container">
+<div class="row">
+
+<div class="col-md-3">
+<%= render 'users/user', user: @user %>
+<%= render 'books/list', books: @books, book: @book %>
+</div>
+
+<div class="col-md-9">
 <h1>Book detail</h1>
-<div class="post-body">
-  <%= @book.title %>
-  <%= @book.body %>
+
+<table class='table'>
+<thead>
+    <tr>
+      <th></th>
+      <th>Title</th>
+      <th>Opinion</th>
+      <th colspan="3"></th>
+    </tr>
+</thead>
+<tr>
+  <td><%= link_to(@book.user) do %>
+          <%= attachment_image_tag(@book.user, :profile_image, :fill, 100, 100, fallback: "no_image.jpg") %><br>
+          <%= @book.user.name %>
+          <% end %>
+  </td>
+  <td><%= link_to @book.title,@book, class: "book_#{@book.id}" %></td>
+  <td><%= @book.body %></td>
   <% if @book.user == current_user %>
-  <%= link_to "edit", edit_book_path(@book) %>
-  <%= link_to "destroy", book_path(@book), method: :delete %>
+  <td><%= link_to "edit", edit_book_path(@book) %></td>
+  <td><%= link_to "destroy", book_path(@book), method: :delete %></td>
   <% end %>
+</tr>
+</table>
+
+</div>
+</div>
+</div>
 </div>
