--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,11 +1,5 @@
-<% if @user.errors.any? %>
-	<h3><%= pluralize(@user.errors.count, "error") %>&nbsp;prohibited this user from being saved:</h3>
-	<ul>
-		<% @user.errors.full_messages.each do |message| %>
-		<li><%= message %></li>
-		<% end %>
-	</ul>
-<% end %>
+<%= render 'layouts/errors', obj: @book %>
+
 <div class="container">
 <div class="row">
 
