--- a/app/views/books/_list.html.erb
+++ b/app/views/books/_list.html.erb
@@ -6,6 +6,8 @@
   <%= f.text_field :title %>
   <h4>Opinion</h4>
   <%= f.text_area :body %>
+  <div class="actions row">
   <%= f.submit 'Create Book',class: "btn btn-success" %>
+  </div>
 <% end %>
 
