--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -13,7 +13,7 @@
 					<p><%=link_to "Log in", new_user_session_path, class: "btn btn-info btn-lg " %></p>
 				</div>
 				<div class="row">
-					<p><%=link_to "sign up", new_user_registration_path, class: "btn btn-success btn-lg " %></p>
+					<p><%=link_to "Sign up", new_user_registration_path, class: "btn btn-success btn-lg " %></p>
 				</div>
 			</div>
 
