--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,7 +6,7 @@
 <%= render 'books/list', books: @books, book: @book %>
 </div>
 
-<div class="col-md-9">
+<div class="col-md-8 offset-md-1">
 <h2>Users</h2>
 <table class="table">
 <thead>
