--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
 <footer>
   <div class='container'>
   	<div class='row'>
-    	<div class='col-md-5 mx-auto'>
+    	<div class='col-md-5 offset-md-5'>
     		<p>CopyRight Infratop.inc</p>
     	</div>
     </div>
