--- a/app/views/books/_list.html.erb
+++ b/app/views/books/_list.html.erb
@@ -1,13 +1,19 @@
 
 <h1>New book</h1>
-
-<%= form_with model: book, local:true do |f| %>
-  <h4>Title</h4>
-  <%= f.text_field :title %>
-  <h4>Opinion</h4>
-  <%= f.text_area :body %>
-  <div class="actions row">
-  <%= f.submit 'Create Book',class: "btn btn-success" %>
+<%= form_for(book) do |f| %>
+  <div class="row field">
+    <%= f.label :title, "Title" %>
+    <%= f.text_field :title, class:"col-xs-12" %>
   </div>
+
+  <div class="row field">
+    <%= f.label :body, "Opinion" %>
+    <%= f.text_area :body, class:"col-xs-12" %>
+  </div>
+
+  <div class="row">
+    <%= f.submit "Create Book", class: 'btn btn-primary col-xs-12' %>
+  </div>
+
 <% end %>
 
