--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,14 +1,16 @@
 <%= render 'layouts/errors', obj: @book %>
 
+
+
 <div class="container">
 <div class="row">
 
 <div class="col-md-3">
 <%= render 'users/user', user: current_user %>
-<%= render 'books/list', books: @books, book: @book %>
+<%= render 'books/list', book: @book %>
 </div>
 
-<div class="col-md-9">
+<div class="col-md-8 offset-md-1">
    <h3>Books</h3>
 
 
