--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -3,10 +3,10 @@
 
 <div class="col-md-3">
 <%= render 'users/user', user: @user %>
-<%= render 'books/list', books: @books, book: @book %>
+<%= render 'books/list', book: @new_book %>
 </div>
 
-<div class="col-md-9">
+<div class="col-md-8 offset-md-1">
 <h1>Book detail</h1>
 
 <table class='table'>
