--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -1,22 +1,22 @@
 <div class="container">
 <div class="row">
 
-   <div class="main col-md-8  mx-auto">
-		<h1>welcome to<span class="glyphicon glyphicon-book"></span>
-			<strong><i class="fas fa-book"></i>Bookers</strong>  !!</h1>
-			<p>In <span class="glyphicon glyphicon-book"></span><strong><i class="fas fa-book"></i>Bookers</strong>,</p>
-			<p>you can share and exchange your opinions , inpressions , and emotions</p>
-			<p>about varioius books!</p>
+   <div class="main">
+     <div class="col-md-11 offset-md-6">
+     <h1>welcome to<span class="glyphicon glyphicon-book"></span>
+     <strong><i class="fas fa-book"></i>Bookers</strong>  !!</h1>
+     <p>In <span class="glyphicon glyphicon-book"></span><strong><i class="fas fa-book"></i>Bookers</strong>,</p>
+     <p>you can share and exchange your opinions , inpressions , and emotions</p>
+     <p>about varioius books!</p>
+     </div>
 
-			<div class="btn-wrapper">
-				<div class="row">
-					<p><%=link_to "Log in", new_user_session_path, class: "btn btn-info btn-lg " %></p>
-				</div>
-				<div class="row">
-					<p><%=link_to "Sign up", new_user_registration_path, class: "btn btn-success btn-lg " %></p>
-				</div>
-			</div>
+       <div class="btn-wrapper offset-md-8">
+         <p><%=link_to "Log in", new_user_session_path, class: "btn btn-info btn-block " %></p>
 
-	</div>
+         <p><%=link_to "Sign up", new_user_registration_path, class: "btn btn-success btn-block " %></p>
+
+
+       </div>
+    </div>
 </div>
 </div>
