--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,7 +3,7 @@
 
 <div class="col-md-3">
 <%= render 'users/user', user: current_user %>
-<%= render 'books/list', books: @books, book: @book %>
+<%= render 'books/list', book: @book %>
 </div>
 
 <div class="col-md-8 offset-md-1">
