--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,11 +3,11 @@
 <div class="row">
 <div class="col-md-3">
 <%= render 'users/user', user: @user %>
-<%= render 'books/list', books: @books, book: @book %>
+<%= render 'books/list', book: @book %>
 </div>
 
 
-<div class="col-md-9">
+<div class="col-md-8 offset-md-1">
 <h2>Books</h2>
 
 
