--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,7 @@
 <header >
   <nav class="navbar navbar-fixed-top navbar-expand-lg navbar-dark bg-dark" >
   <div class="container">
-    <div class='nav navbar-nav navbar-left' >
+    <div class='nav navbar-nav navbar-light navbar-left' >
       <span class="title" style="color:#ffffff;"><%= link_to 'Bookers',root_path %></span>
     </div>
     <div class="justify-content-end">
