--- a/app/views/books/_list.html.erb
+++ b/app/views/books/_list.html.erb
@@ -1,19 +1,16 @@
 
 <h1>New book</h1>
 <%= form_for(book) do |f| %>
-  <div class="row field">
+
     <%= f.label :title, "Title" %>
-    <%= f.text_field :title, class:"col-xs-12" %>
-  </div>
-
-  <div class="row field">
+    <div><%= f.text_field :title, class:"col-xs-12" %></div>
     <%= f.label :body, "Opinion" %>
-    <%= f.text_area :body, class:"col-xs-12" %>
-  </div>
+    <div><%= f.text_area :body, class:"col-xs-12" %></div>
+  
 
-  <div class="row">
-    <%= f.submit "Create Book", class: 'btn btn-primary col-xs-12' %>
-  </div>
+  
+    <%= f.submit "Create Book", class: 'btn btn-success col-xs-12' %>
+  
 
 <% end %>
 
