--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,4 +1,3 @@
-<h2>Editing Book</h2>
 <% if @book.errors.any? %>
 	<h3><%= pluralize(@book.errors.count, "error") %>&nbsp;prohibited this user from being saved:</h3>
 	<ul>
@@ -8,14 +7,28 @@
 	</ul>
 <% end %>
 
-
+<div class="container">
+<div class="row">
+<div class="col-md-8 offset-md-5">
+<h1>Editing Book</h1>
 <%= form_with model:@book, local:true do |f| %>
+  <div>
   <label for="inputName">Title</label>
+  </div>
+  <div>
   <%= f.text_field :title, autofocus: true, id:"inputName", placeholder:"名前"%>
-  <label for="inputImage">Opinion</label>
+  </div>
+  <div><label for="inputImage">Opinion</label></div>
+  <div>
   <%= f.text_area :body %>
-  <%= f.submit "Update Book" %>
+  </div>
+  <div>  
+  <%= f.submit "Update Book" ,class: "btn btn-success col-xs-12"%>
+  </div>
 <% end %>
 <%= link_to "Show", book_path %>
    |
 <%= link_to "Back", books_path %>
+</div>
+</div>
+</div>
