--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -27,8 +27,8 @@
   <td><%= link_to @book.title,@book, class: "book_#{@book.id}" %></td>
   <td><%= @book.body %></td>
   <% if @book.user == current_user %>
-  <td><%= link_to "Edit", edit_book_path(@book) %></td>
-  <td><%= link_to "Destroy", book_path(@book), method: :delete %></td>
+  <td><%= link_to "Edit", edit_book_path(@book),class: "btn-sm btn-success edit_book_#{@book.id}" %></td>
+  <td><%= link_to "Destroy", book_path(@book), method: :delete , class: "btn-sm btn-danger destroy_book_#{@book.id}" %></td>
   <% end %>
 </tr>
 </table>
