--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,20 +2,20 @@
   <nav class="navbar navbar-fixed-top navbar-expand-lg navbar-dark bg-dark" >
   <div class="container">
     <div class='nav navbar-nav navbar-light navbar-left' >
-      <span class="title" style="color:#ffffff;"><%= link_to 'Bookers',root_path %></span>
+      <span class="title" style="color:#ffffff;"><strong>Bookers</strong></span>
     </div>
     <div class="justify-content-end">
       <ul class="nav navbar-nav ml-auto">
         <% if user_signed_in? %>
-          <li class="nav-item"><%= link_to ' Home',user_path(current_user),class: 'fas fa-home' %></li>
-          <li class="nav-item"><%= link_to ' Users',users_path,class: 'fas fa-users' %></li>
-          <li class="nav-item"><%= link_to ' Books',books_path ,class: "fas fa-book-open" %></li>
-          <li class="nav-item"><%= link_to ' logout', destroy_user_session_path, method: :delete,class: 'fas fa-sign-out-alt' %></li>
+          <li class="nav-item"><%= link_to 'Home',user_path(current_user),class: 'fas fa-home' %></li>
+          <li class="nav-item"><%= link_to 'Users',users_path,class: 'fas fa-users' %></li>
+          <li class="nav-item"><%= link_to 'Books',books_path ,class: "fas fa-book-open" %></li>
+          <li class="nav-item"><%= link_to 'logout', destroy_user_session_path, method: :delete,class: 'fas fa-sign-out-alt' %></li>
         <% else %>
-          <li class="nav-item"><%= link_to ' Home',root_path,class: 'fas fa-home' %></li>
-          <li class="nav-item"><%= link_to ' About',home_about_path,class: "fas fa-link" %></li>
-          <li class="nav-item"><%= link_to ' sign up', new_user_registration_path,class: 'fas fa-user-plus' %></li>
-          <li class="nav-item"><%= link_to ' login', new_user_session_path ,class: 'fas fa-sign-in-alt'%></li>
+          <li class="nav-item"><%= link_to 'Home',root_path,class: 'fas fa-home' %></li>
+          <li class="nav-item"><%= link_to 'About',home_about_path,class: "fas fa-link" %></li>
+          <li class="nav-item"><%= link_to 'sign up', new_user_registration_path,class: 'fas fa-user-plus' %></li>
+          <li class="nav-item"><%= link_to 'login', new_user_session_path ,class: 'fas fa-sign-in-alt'%></li>
         <% end %>
       </ul>
     </div>
