--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -5,12 +5,12 @@
 <div class="container">
 <div class="row">
 
-<div class="col-md-3">
+<div class="col-md-3 col-xs-3">
 <%= render 'users/user', user: current_user %>
 <%= render 'books/list', book: @book %>
 </div>
 
-<div class="col-md-8 offset-md-1">
+<div class="col-md-8 col-xs-9 offset-md-1">
    <h1>Books</h1>
 
 
@@ -37,6 +37,20 @@
        <td>
        <%= book.body %>
        </td>
+
+       <td>
+        <% if book.favorited_by?(current_user) %>
+           <%= link_to book_favorites_path(book), method: :delete do %>
+              ♥<%= book.favorites.count %> 
+           <% end %>
+        <% else %>
+           <%= link_to book_favorites_path(book), method: :post do %>
+              ♡<%= book.favorites.count %> 
+           <% end %>
+        <% end %>
+       </td>
+
+       <td class="comment">コメント数：<%= book.book_comments.count %></td>
 
     <% end %>
     </tr>
