--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -11,9 +11,9 @@
      </div>
 
        <div class="btn-wrapper offset-md-8">
-         <p><%=link_to "Log in", new_user_session_path, class: "btn btn-info btn-block " %></p>
+         <%=link_to "Log in", new_user_session_path, class: "btn btn-info btn-block " %>
 
-         <p><%=link_to "Sign up", new_user_registration_path, class: "btn btn-success btn-block " %></p>
+         <%=link_to "Sign up", new_user_registration_path, class: "btn btn-success btn-block " %>
 
 
        </div>
