--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,12 +1,12 @@
 <div class="container">
 <div class="row">
 
-<div class="col-md-3">
+<div class="col-md-3 col-xs-9">
 <%= render 'users/user', user: current_user %>
 <%= render 'books/list', book: @book %>
 </div>
 
-<div class="col-md-8 offset-md-1">
+<div class="col-md-8 col-xs-3 offset-md-1">
 <h2>Users</h2>
 <table class="table">
 <thead>
