--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,13 +1,13 @@
 
 <div class="container">
 <div class="row">
-<div class="col-md-3">
+<div class="col-md-3 col-xs-3">
 <%= render 'users/user', user: @user %>
 <%= render 'books/list', book: @book %>
 </div>
 
 
-<div class="col-md-8 offset-md-1">
+<div class="col-md-8 col-xs-9 offset-md-1">
 <h1>Books</h1>
 
 
@@ -34,6 +34,7 @@
        <td>
        <%= book.body %>
        </td>
+       <td class="comment">コメント数：<%= book.book_comments.count %></td>
 
     <% end %>
     </tr>
