--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -4,7 +4,7 @@
    <div class="main">
      <div class="col-md-11 offset-md-6">
      <h1>welcome to<span class="glyphicon glyphicon-book"></span>
-     <strong><i class="fas fa-book"></i>Bookers</strong>  !!</h1>
+     <strong><i class="fas fa-book"></i>Bookers</strong>  !!!</h1>
      <p>In <span class="glyphicon glyphicon-book"></span><strong><i class="fas fa-book"></i>Bookers</strong>,</p>
      <p>you can share and exchange your opinions , inpressions , and emotions</p>
      <p>about varioius books!</p>
